--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
           <div class="wrapper">
               <article>
             <h2>Oscar Bonilla</h2>
-            <img class="me" src="../img/me.jpeg" alt="Oscar Bonilla">
+            <img class="me" src="./me.jpeg" alt="Oscar Bonilla">
               <p>My name is Oscar Bonilla I am a junior developer that graduatd from the University of Miami Coding Bootcamp program. I was born and raised in Miami, Florida on August 10th, 1996. My hobbies are playing multiple instruments, drawing, and skateboarding. In the beginning of my computer science journey was in 2019, where I was sef taught HTML, CSS, and Javascript. I decided to take my education to the next level and I was fortunate to get in to The University Of Miami Coding Bootcamp program where I became a full stack web developer. </p>
           </div>
             </article>
@@ -43,13 +43,13 @@
 
               <li><a href="index.html">Home</a></li>
               <li><a href="cases.html">Cases</a></li>
-              <li><a href="portfolio.html">Portfolio</a></li>
+              <!-- <li><a href="portfolio.html">Portfolio</a></li> -->
               <li><a href="about.html">About me</a></li>
               <li><a href="contact.html">Contact</a></li>
 
             </ul>
           <ul class="footer-links-cases">
-            <li>LATEST CASES</li>
+            <li>LATEST WORK</li>
             <li><a href="#"></a></li>
             <li><a href="#"></a></li>
             <li><a href="#"></a></li>
@@ -57,13 +57,13 @@
           </ul>
           <div class="footer-sm">
             <a href="https://www.linkedin.com/in/oscar-bonilla-90b506177/"target="_blank">
-              <img src="../img/in.png" alt="linkedin logo">
+              <img src="./in.png" alt="linkedin logo">
             </a>
           <a href="https://www.facebook.com/oscar.bonilla.102"target="_blank">
-            <img src="../img/face.png" alt="facebook logo">
+            <img src="./face.png" alt="facebook logo">
           </a>
           <a href="https://www.instagram.com/racso_123/"target="_blank">
-              <img src="../img/insta.jpg" alt="instagram logo">
+              <img src="./insta.jpg" alt="instagram logo">
             </a>
           </div>
         </footer>
