--- a/case1.html
+++ b/case1.html
@@ -20,12 +20,12 @@
         <a href="cases.html" class="header-cases">Cases</a>
       </nav>
     </header>
-        <main>
-          <div class="wrapper">
-            <h2>The Beauty Of Web Development</h2>
+        <main class="wrapper">
+          <div class="about-me"">
+            <h1 class="about-me">The Beauty Of Web Development</h1>
             <iframe width="780px" height="550px" src="https://www.youtube.com/embed/5D6OuDCxEj0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <article>
-          <h3>Web Development</h3>
+          <h1>Web Development</h1>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam id iaculis nibh. Cras ornare venenatis sapien eget consectetur. Suspendisse sed dui scelerisque, malesuada mi eu, rutrum odio. Duis vitae mollis est. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Phasellus fringilla, risus ut posuere molestie, mauris lorem suscipit diam, eget porttitor risus justo id ex. Curabitur laoreet id orci id bibendum. Maecenas congue vestibulum neque. Etiam sit amet commodo lectus. Nunc laoreet finibus dolor ac porta. Cras lectus urna, porttitor a malesuada eu, lobortis suscipit leo. Nulla eget massa egestas lorem bibendum efficitur convallis non nisi. Sed neque leo, tempor ut ornare quis, porta aliquam quam. Proin pharetra augue vel scelerisque tristique. Donec euismod arcu et ullamcorper viverra.
 
             Sed consequat lacus id eleifend fringilla. Ut rhoncus tempus mattis. Sed ac sem purus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Praesent vitae dignissim dui. Ut vel justo bibendum, semper tellus nec, tincidunt lacus. Fusce fringilla nec libero id dictum. Fusce elementum tempus sagittis. Proin eu placerat mi. Cras interdum lorem eu enim sagittis varius. Sed euismod, turpis nec iaculis tempus, augue dolor aliquam erat, auctor placerat odio ex laoreet elit. Sed imperdiet ullamcorper sapien dapibus tincidunt. In suscipit sit amet diam non luctus. Maecenas tempus, metus sed gravida luctus, nisi enim feugiat mauris, vitae finibus orci metus vel dolor.</p>
@@ -51,13 +51,13 @@
           </ul>
           <div class="footer-sm">
             <a href="https://www.linkedin.com/in/oscar-bonilla-90b506177/"target="_blank">
-              <img src="../img/in.png" alt="linkedin logo">
+              <img src="./in.png" alt="linkedin logo">
             </a>
           <a href="https://www.facebook.com/oscar.bonilla.102"target="_blank">
-            <img src="../img/face.png" alt="facebook logo">
+            <img src="./face.png" alt="facebook logo">
           </a>
           <a href="https://www.instagram.com/racso_123/"target="_blank">
-              <img src="../img/insta.jpg" alt="instagram logo">
+              <img src="./insta.jpg" alt="instagram logo">
             </a>
           </div>
         </footer>
