--- a/cases.html
+++ b/cases.html
@@ -101,13 +101,13 @@
           </ul>
           <div class="footer-sm">
             <a href="https://www.linkedin.com/in/oscar-bonilla-90b506177/"target="_blank">
-              <img src="../img/in.png" alt="linkedin logo">
+              <img src="./in.png" alt="linkedin logo">
             </a>
           <a href="https://www.facebook.com/oscar.bonilla.102"target="_blank">
-            <img src="../img/face.png" alt="facebook logo">
+            <img src="./face.png" alt="facebook logo">
           </a>
           <a href="https://www.instagram.com/racso_123/"target="_blank">
-              <img src="../img/insta.jpg" alt="instagram logo">
+              <img src="./insta.jpg" alt="instagram logo">
             </a>
           </div>
         </footer>
