--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="wrapper">
           <section class="index-links">
             <a href="cases.html">
-              <div class="index-boxlink-square">
+              <div class="index-boxlink-rec">
                 <h3>CASES</h3>
               </div>
             </a>
@@ -39,15 +39,11 @@
                 <h3>PORTFOLIO</h3>
               </div>
             </a>
-              <a href="osbz.html"></a>
-              <div class="index-boxlink-square">
-                <h3>OSBz</h3>
-              </div>
-            </a>
-            <a href="about.html"></a>
+            
+            <!-- <a href="about.html"></a>
               <div class="index-boxlink-square">
                 <h3>ABOUT</h3>
-              </div>
+              </div> -->
             </a>
             <a href="contact.html">
               <div class="index-boxlink-rec">
@@ -55,7 +51,7 @@
               </div>
             </a>
             <a href="https://www.linkedin.com/in/oscar-bonilla-90b506177/"target="_blank">
-              <div class="index-boxlink-square">
+              <div class="index-boxlink-rec">
                 <h3>LINKEDIN</h3>
               </div>
             </a>
@@ -80,13 +76,13 @@
           </ul>
           <div class="footer-sm">
             <a href="https://www.linkedin.com/in/oscar-bonilla-90b506177/"target="_blank">
-              <img src="../img/in.png" alt="linkedin logo">
+              <img src="./in.png" alt="linkedin logo">
             </a>
           <a href="https://www.facebook.com/oscar.bonilla.102"target="_blank">
-            <img src="../img/face.png" alt="facebook logo">
+            <img src="./face.png" alt="facebook logo">
           </a>
           <a href="https://www.instagram.com/racso_123/"target="_blank">
-              <img src="../img/insta.jpg" alt="instagram logo">
+              <img src="./insta.jpg" alt="instagram logo">
             </a>
           </div>
         </footer>
