--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Fraunces:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Shrikhand&display=swap" rel="stylesheet">
       <link rel="stylesheet" href="style.css">
   </head>
-  
+
   <body>
     <header>
       <a href="index.html" class="header-brand">OSBz</a>
@@ -44,13 +44,12 @@
 
               <li><a href="index.html">Home</a></li>
               <li><a href="cases.html">Cases</a></li>
-              <!-- <li><a href="portfolio.html">Portfolio</a></li> -->
               <li><a href="about.html">About me</a></li>
               <li><a href="contact.html">Contact</a></li>
 
             </ul>
           <ul class="footer-links-cases">
-            <li>LATEST WORK</li>
+            <li>LATEST CASES</li>
             <li><a href="#"></a></li>
             <li><a href="#"></a></li>
             <li><a href="#"></a></li>
