--- a/portfolio.html
+++ b/portfolio.html
@@ -1,18 +1,68 @@
-<!DOCTYPE html>
 <html>
   <head>
-    <title>My portfolio</title>
+    <title>Contact</title>
     <maeta chartset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Fraunces:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Shrikhand&display=swap" rel="stylesheet">
       <link rel="stylesheet" href="style.css">
     </head>
+
   <body>
+      <header>
+    <a href="index.html" class="header-brand">OSBz</a>
+
     <nav>
       <ul>
-        <li><a href="index.html">Home</a></li>
         <li><a href="portfolio.html">Portfolio</a></li>
-        <li><a href="about.html">About me</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="About.html">About me</a></li>
+        <li><a href="Contact.html">Contact</a></li>
       </ul>
-   </nav>
-   <h1>Portfolio</h1>
-  </body>
+ </nav>
+      <section class="case-banner">
+          <div class="wrapper-b">
+            <h1>COMING SOON!</h1>
+            <br>
+            <h1>Email: oscar.bonilla123@outlook.com</h1>
+            <br>
+            <h1>Phone Number: 305.300.2300</h1>
+            <br>
+          </div>
+        </section>
+        </main>
+      <div class="wrapper">
+    <footer>
+        <ul class="footer-links-main">
+
+          <li><a href="index.html">Home</a></li>
+          <li><a href="cases.html">Cases</a></li>
+          <li><a href="portfolio.html">Portfolio</a></li>
+          <li><a href="about.html">About me</a></li>
+          <li><a href="contact.html">Contact</a></li>
+
+        </ul>
+      <ul class="footer-links-cases">
+        <li>LATEST CASES</li>
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
+      </ul>
+    
+      <div class="footer-sm">
+        <a href="https://www.linkedin.com/in/oscar-bonilla-90b506177/"target="_blank">
+          <img src="./in.png" alt="linkedin logo">
+        </a>
+      <a href="https://www.facebook.com/oscar.bonilla.102"target="_blank">
+        <img src="./face.png" alt="facebook logo">
+      </a>
+      <a href="https://www.instagram.com/racso_123/"target="_blank">
+          <img src="./insta.jpg" alt="instagram logo">
+        </a>
+      </div>
+ 
+    </footer>
+
+     </body>
+     
+</html>
