--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
       <nav>
         <ul>
           <li><a href="portfolio.html">Portfolio</a></li>
-          <li><a href="About.html">About me</a></li>
-          <li><a href="Contact.html">Contact</a></li>
+          <li><a href="about.html">About me</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
         <a href="cases.html" class="header-cases">Cases</a>
       </nav>
     </header>
-    
+
         <main>
           <section class="index-banner">
             <div class="vertical-center">
