--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <img src="./face.png" alt="facebook logo">
           </a>
           <a href="https://www.instagram.com/racso_123/"target="_blank">
-              <img src="./insta.jpg" alt="instagram logo">
+              <img class="insta" src="./insta.jpg" alt="instagram logo">
             </a>
           </div>
         </footer>
