--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
               <li><a href="cases.html">Cases</a></li>
               <li><a href="about.html">About me</a></li>
               <li><a href="contact.html">Contact</a></li>
-
+              <a href="cases.html" class="header-cases">Cases</a>
             </ul>
           <ul class="footer-links-cases">
             <li>LATEST CASES</li>
