--- a/contact.html
+++ b/contact.html
@@ -18,6 +18,7 @@
         <li><a href="about.html">About me</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
+      <a href="cases.html" class="header-cases">Cases</a>
  </nav>
       <section class="case-banner">
           <div class="wrapper-b">
