--- a/portfolio.html
+++ b/portfolio.html
@@ -21,12 +21,10 @@
  </nav>
       <section class="case-banner">
           <div class="wrapper-b">
-            <h1>COMING SOON!</h1>
+            <h2>COMING SOON!<br> For Inquiries Contact me!</h2>
             <br>
             <h1>Email: oscar.bonilla123@outlook.com</h1>
-            <br>
             <h1>Phone Number: 305.300.2300</h1>
-            <br>
           </div>
         </section>
         </main>
@@ -41,13 +39,13 @@
           <li><a href="contact.html">Contact</a></li>
 
         </ul>
-      <ul class="footer-links-cases">
+      <!-- <ul class="footer-links-cases">
         <li>LATEST CASES</li>
         <li><a href="#"></a></li>
         <li><a href="#"></a></li>
         <li><a href="#"></a></li>
         <li><a href="#"></a></li>
-      </ul>
+      </ul> -->
     
       <div class="footer-sm">
         <a href="https://www.linkedin.com/in/oscar-bonilla-90b506177/"target="_blank">
