--- a/case1.html
+++ b/case1.html
@@ -41,13 +41,13 @@
               <li><a href="about.html">About me</a></li>
               <li><a href="contact.html">Contact</a></li>
             </ul>
-          <ul class="footer-links-cases">
+          <!-- <ul class="footer-links-cases">
             <li>LATEST CASES</li>
             <li><a href="#"></a></li>
             <li><a href="#"></a></li>
             <li><a href="#"></a></li>
             <li><a href="#"></a></li>
-          </ul>
+          </ul> -->
           <div class="footer-sm">
             <a href="https://www.linkedin.com/in/oscar-bonilla-90b506177/"target="_blank">
               <img src="./in.png" alt="linkedin logo">
