--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,8 @@
  </nav>
       <section class="case-banner">
           <div class="wrapper-b">
-            <h2>CONTACT ME</h2>
+            <h2>CONTACT ME <br> For Inquiries Contact me!</h2>
+            <br>
             <h1>Email: oscar.bonilla123@outlook.com</h1>
             <h1>Phone Number: 305.300.2300</h1>
           </div>
@@ -38,14 +39,14 @@
           <li><a href="contact.html">Contact</a></li>
 
         </ul>
-      <ul class="footer-links-cases">
+      <!-- <ul class="footer-links-cases">
         <li>LATEST CASES</li>
         <li><a href="#"></a></li>
         <li><a href="#"></a></li>
         <li><a href="#"></a></li>
         <li><a href="#"></a></li>
       </ul>
-    
+     -->
       <div class="footer-sm">
         <a href="https://www.linkedin.com/in/oscar-bonilla-90b506177/"target="_blank">
           <img src="./in.png" alt="linkedin logo">
