--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
               <article>
             <h2>Oscar Bonilla</h2>
             <img class="me" src="./me.jpeg" alt="Oscar Bonilla">
-              <p>My name is Oscar Bonilla I am a junior developer that graduatd from the University of Miami Coding Bootcamp program. I was born and raised in Miami, Florida on August 10th, 1996. My hobbies are playing multiple instruments, drawing, and skateboarding. In the beginning of my computer science journey was in 2019, where I was sef taught HTML, CSS, and Javascript. I decided to take my education to the next level and I was fortunate to get in to The University Of Miami Coding Bootcamp program where I became a full stack web developer. </p>
+              <p>My name is Oscar Bonilla I am a junior developer that graduated from the University of Miami Coding Bootcamp program. I was born and raised in Miami, Florida on August 10th, 1996. My hobbies are playing multiple instruments, drawing, and skateboarding. In the beginning of my computer science journey was in 2019, where I was sef taught HTML, CSS, and Javascript. I decided to take my education to the next level and I was fortunate to get in to The University Of Miami Coding Bootcamp program where I became a full stack web developer. </p>
           </div>
             </article>
         </section>
