--- a/cases.html
+++ b/cases.html
@@ -30,42 +30,58 @@
               <h2>Cases</h2>
               <a href="case1.html">
               <div class="cases-link">
+                <div class="case1">
               <p>Case 1</p>
               </div>
+            </div>
               </a>
               <a href="case2.html">
               <div class="cases-link">
+                <div class="case2">
               <p>Case 2</p>
+              </div>
               </div>
               </a>
               <a href="case3.html">
               <div class="cases-link">
+                <div class="case3">
               <p>Case 3</p>
+              </div>
               </div>
               </a>
               <a href="case4.html">
               <div class="cases-link">
+                <div class="case4">
               <p>Case 4</p>
+              </div>
               </div>
               </a>
               <a href="case5.html">
               <div class="cases-link">
+                <div class="case5">
               <p>Case 5</p>
+              </div>
               </div>
               </a>
               <a href="case6.html">
               <div class="cases-link">
+                <div class="case6">
               <p>Case 6</p>
+              </div>
               </div>
               </a>
               <a href="case7.html">
               <div class="cases-link">
+                <div class="case7">
               <p>Case 7</p>
+              </div>
               </div>
               </a>
               <a href="case8.html">
               <div class="cases-link">
+                <div class="case8">
               <p>Case 8</p>
+              </div>
               </div>
             </a>
           </div>
